<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/content"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_gank"
            android:checked="true"
            android:icon="@drawable/ic_gank"
            android:title="@string/nav_menu_gank" />
        <item
            android:id="@+id/menu_today"
            android:icon="@drawable/ic_today_white"
            android:title="@string/nav_menu_today" />
        <item
            android:id="@+id/menu_news"
            android:icon="@drawable/ic_news"
            android:title="@string/nav_news" />
        <item
            android:id="@+id/menu_favorite"
            android:icon="@drawable/ic_star_grey"
            android:title="@string/nav_menu_favorite" />

    </group>
    <group android:id="@+id/other">
        <item
            android:id="@+id/menu_palette"
            android:icon="@drawable/ic_palette"
            android:title="@string/nav_menu_palette" />
        <item
            android:id="@+id/menu_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/nav_menu_feedback" />
    </group>
</menu>