<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/all"
        android:checkable="true"
        android:checked="true"
        android:title="all" />
    <item
        android:id="@+id/android"
        android:title="@string/gank_android" />
    <item
        android:id="@+id/ios"
        android:title="@string/gank_ios" />
    <item
        android:id="@+id/welfare"
        android:title="@string/gank_welfare" />
    <item
        android:id="@+id/front_end"
        android:title="@string/gank_front_end" />
    <item
        android:id="@+id/app"
        android:title="@string/gank_app" />
    <item
        android:id="@+id/extra"
        android:title="@string/gank_extra" />
</menu>